syntax = "proto3";

package exchange;

// Сервис биржи
service ExchangeService {
  // Создание ордера (unary)
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  
  // Получение баланса пользователя (unary)
  rpc GetBalance(GetBalanceRequest) returns (BalanceResponse);
  
  // Получение списка активных ордеров (unary)
  rpc GetActiveOrders(GetActiveOrdersRequest) returns (ActiveOrdersResponse);
  
  // Поток котировок в реальном времени (server streaming)
  rpc StreamQuotes(StreamQuotesRequest) returns (stream Quote);
  
  // Отмена ордера (unary)
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
}

// Тип ордера
enum OrderType {
  ORDER_TYPE_UNSPECIFIED = 0;
  ORDER_TYPE_BUY = 1;
  ORDER_TYPE_SELL = 2;
}

// Статус ордера
enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_FILLED = 2;
  ORDER_STATUS_CANCELLED = 3;
}

// Ордер
message Order {
  int64 id = 1;
  string user_id = 2;
  string symbol = 3;
  OrderType type = 4;
  double price = 5;
  int64 quantity = 6;
  int64 filled_quantity = 7;
  OrderStatus status = 8;
  int64 created_at = 9;
}

// Запрос на создание ордера
message CreateOrderRequest {
  string user_id = 1;
  string symbol = 2;
  OrderType type = 3;
  double price = 4;
  int64 quantity = 5;
}

// Ответ с ордером
message OrderResponse {
  Order order = 1;
}

// Запрос на получение баланса
message GetBalanceRequest {
  string user_id = 1;
  string currency = 2; // "USD", "BTC", "ETH" и т.д.
}

// Ответ с балансом
message BalanceResponse {
  string user_id = 1;
  string currency = 2;
  double balance = 3;
}

// Запрос на получение активных ордеров
message GetActiveOrdersRequest {
  string user_id = 1;
  string symbol = 2; // опционально, если пустое — все символы
}

// Ответ со списком активных ордеров
message ActiveOrdersResponse {
  repeated Order orders = 1;
}

// Запрос на поток котировок
message StreamQuotesRequest {
  repeated string symbols = 1; // список символов для отслеживания
}

// Котировка
message Quote {
  string symbol = 1;
  double bid = 2; // цена покупки
  double ask = 3; // цена продажи
  double last = 4; // последняя цена сделки
  int64 volume = 5;
  int64 timestamp = 6;
}

// Запрос на отмену ордера
message CancelOrderRequest {
  string user_id = 1;
  int64 order_id = 2;
}

// Ответ на отмену ордера
message CancelOrderResponse {
  bool success = 1;
  string message = 2;
}

